katars/tests/snapshots/snapshots__error_interp_undefined.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: undefined variable 'x'
   ╭─[<test>:1:15]
   │
 1 │ print("hello {x}")
   │               ┬  
   │               ╰── undefined variable 'x'
───╯
